plang/testing/logs/false-incorrect/108/program108.p.p
sC (JRg0) (hX (lJza lFO7u (P1) t) (ccX1n NY) n5oDc) :- (zSs (Pr) (M) (PbB5f)), dMGFo hVqgZ wZ (lO (m (hq jWBe) (f g) (xQsmc qUHjw (ykB2U (LfQ) (sd) (cowP3 N U (z0 w (zOfS (auq) (sQQAW T5Mi (N) (t7 (Rf8) a3gJ) (aSnfU)) pre) (Nw)) MP)) nFhQ1)) (XFCKJ) rH ue) U7sc, ((ze tHfHT F, xz0Sk (q8d (z Z) rE3xY (deoax v yOL6b (xsU Ahn1 DjHn) (yWT (CNP0))) (Kz4)) AVr3 (crm y))).


tKS V Jv.


o :- a.

w eqLF LOuyu EBMrp :- (ktl JwV5 (SUd0) (uix) (E)).
j (p ZX jl2bK bYX86 (g (Co) (fdFwh (bcUP) (s) Gs57X))) (pa9l QR (cis Mez) (Y0) (O)) (fRaYF (Dxr)).
? aSC8 nt s hfzo; rXy, (awrMr (wH C0Z Kb j4Nu)), p8P EGn; (f fN8rM (qjdNs (OmAN) (HnQu)); wl2Yf No; z z (NH0GA) AIwaV (xa (p WpmUT) bayU (QAnx)); nPW (cZr (ssAX) eX)); u1UBL Xleck; ((qK)), zs NQtg (S8pEy) (xn (CAzdm)) (L).